@@ -1,3 +1,8 @@
+2014-04-24  Cong Hou  <congh@google.com>
+
+	PR tree-optimization/60896
+	* g++.dg/vect/pr60896.cc: New test.
+
 2014-04-24  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/pack01.c: New test to test the new pack and
